--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>Redirecting...</title>
     <script type="text/javascript">
         // Redirect all 404 errors to index.html for React Router to handle
-        window.location.replace('/iconicque' + window.location.pathname + window.location.search);
+        window.location.replace(window.location.pathname + window.location.search);
     </script>
 </head>
 
